# basic-rag

./: .env.example  .gitignore  README.md  main.py  prd.md  pyproject.toml  run.py
app/: .env.example  main.py
app/api/v1/: document.py  hackrx.py
app/core/: config.py
app/schemas/: document.py  hackrx.py
app/services/: document_processor.py  question_answering.py  vector_store.py
app/utils/document_handlers/: __init__.py  document_handler.py  pdf_downloader.py
storage/documents/vector_stores/hackrx_69c3e17d95074fc1b7a9ba94921a06f3/: index.faiss  index.pkl
tests/: test_hackrx_endpoint.py
