[project]
name = "hackathon-pallavi"
version = "0.1.0"
description = "LLM-Powered Intelligent Query-Retrieval System"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "langchain>=0.0.267",
    "langchain-openai>=0.0.2",
    "pinecone-client>=2.2.2",
    "faiss-cpu>=1.7.4",
    "pypdf>=3.15.1",
    "python-docx>=0.8.11",
    "sqlalchemy>=2.0.19",
    "psycopg2-binary>=2.9.6",
    "pydantic>=2.0.3",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.1.0"
]
